--- a/app/assets/stylesheets/api/content_fields.scss
+++ b/app/assets/stylesheets/api/content_fields.scss
@@ -15,7 +15,7 @@
 
     &.signable {
       cursor: pointer;
-      box-shadow: 0px 0px 6px 3px rgba(255, 255, 0, 0.7);
+      box-shadow: var(--box-shadow-1), 0px 0px 6px 3px rgba(255, 255, 0, 0.7);
     }
   }
 
