--- a/app/assets/stylesheets/api/splash.scss
+++ b/app/assets/stylesheets/api/splash.scss
@@ -1,6 +1,4 @@
 .splash {
-
-
   & .no-matter-what {
     background-image: linear-gradient(
         180deg,
@@ -22,12 +20,23 @@
       justify-content: center;
       align-items: center;
 
+      & h1,
+      h2,
+      h3 {
+        padding: 0 1em;
+      }
+
       & h1 {
         line-height: 0.9;
         font-size: 10vh;
       }
       & h2 {
         font-size: 5vh;
+      }
+
+      & .bullet-points {
+        line-height: 0.5;
+        font-size: 3vh;
       }
     }
   }
