Adjust password helper text

--- a/app/assets/stylesheets/api/session.scss
+++ b/app/assets/stylesheets/api/session.scss
@@ -35,6 +35,10 @@
   color: darkred;
 }
 
+.suggestion {
+  color: #9f6700;
+}
+
 .helper-text {
   font-size: 0.8rem;
   margin: -0.75rem 0 1rem 1rem;
